# Graft

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  graft-technical-spec-final.md
migrations/: 001_initial.sql
src/: main.rs
src/api/: error.rs  mod.rs
src/api/handlers/: client.rs  index.rs  mod.rs  reseed.rs  site.rs
src/client/: mod.rs  qbittorrent.rs  transmission.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/repository/: mod.rs
src/service/: fingerprint.rs  index.rs  mod.rs  reseed.rs
src/site/: mod.rs  tracker.rs
src/site/templates/: gazelle.rs  mod.rs  nexusphp.rs  unit3d.rs
src/utils/: mod.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.tsx
web/src/api/: client.ts  clients.ts  index.ts  reseed.ts  sites.ts  stats.ts
web/src/components/: Layout.tsx
web/src/pages/: Clients.tsx  Dashboard.tsx  History.tsx  Index.tsx  Reseed.tsx  Sites.tsx
web/src/styles/: main.css
